# de-bois-webapp

./: LICENSE  README.md  pyproject.toml
webapp/: manage.py
webapp/bois/: apps.py  urls.py  views.py
webapp/bois/templates/bois/: barfcompetitie.html  base.html  home.html  quotes.html
webapp/webapp/: settings.py  urls.py
