[tool.poetry]
name = "de-bois-webapp"
version = "0.1.0"
description = "De Bois webapplication"
authors = ["mark-boute"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
